--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           src="./assets/facebook.png"
           alt="My Facebook profile"
           class="icon-facebook"
-          onclick="location.href='https://www.facebook.com/MarkAnthonySapera/'"
+          onclick="location.href='https://www.facebook.com/stevencerezouson11'"
           />
           <img
           src="./assets/email.png"
